# LC2_crossmatching

./: .gitignore  LICENSE  README.md  eval_all_checkpoints.py  eval_crossseq.py  eval_helipr.py  eval_kitti360.py  evaluate.py  filter_and_visualize.py  pr_curve.py  preprocess_depth.py  preprocess_range.py  pyproject.toml  requirements.txt  run_train_all.sh  run_vivid_da3_train.sh  test_pr.py  train.py  vistools.py
configs/: eval_helipr.yaml  eval_kitti360.yaml  eval_vivid.yaml  helipr_DCC04_eval.yaml  helipr_DCC05_eval.yaml  kitti360.yaml  kitti360_seq0010_10m.yaml  kitti360_seq0010_kittift.yaml  kitti360_seq0010_v9ft.yaml  train_helipr.yaml  train_helipr_p2b.yaml  train_kitti360.yaml  train_kitti360_v2.yaml  train_vivid.yaml  vivid.yaml  vivid_day2.yaml  vivid_day2_sub10.yaml  vivid_sub10.yaml
dataset/: process_dvs.py  process_img.py  vivid.py
docs/plans/: 2026-02-22-lc2-public-release-design.md
lc2/: __init__.py  depth_estimation.py  encoder.py  fov_overlap.py  gem.py  loop_closure.py  losses.py  model.py  netvlad.py  range_projection.py
lc2/data/: helipr.py  kitti360.py  train_dataset.py  transforms.py  vivid.py
lc2/depth/: __init__.py  base.py  depth_anything.py  dinov3_depth.py  dust3r_depth.py
lc2/lidar/: __init__.py  augmentation.py  infill.py  io.py  projection.py  sensors.py
lc2/utils/: checkpoint.py  retrieval.py
lclc/: models.py  netvlad.py  test.ini  vivid.py
manydepth/: vivid_sequence_intrinsics.json
manydepth/manydepth/: evaluate_depth.py  export_gt_depth.py  options.py  test_all.py  test_simple.py  (+1 more)
scripts/: download_weights.sh
(+3 files in other folders)
